Crypto added. XSLX added

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -50,3 +50,12 @@ init_retry_interval=1
 retry_count=0
 #=====================================================#
 
+
+#===================== Crypto ========================#
+crypto_algorithm=AES/ECB/PKCS5Padding
+crypto_key_type=AES
+crypto_key_size=128
+crypto_key_path=./src/main/resources/crypto.key
+#=====================================================#
+password={crypt:8O9iA4+f3nMzz85szmvKmQ==}
+credentials=test@gmail.com/${password}
