More page objects added.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -57,5 +57,6 @@ crypto_key_type=AES
 crypto_key_size=128
 crypto_key_path=./src/main/resources/crypto.key
 #=====================================================#
-password={crypt:8O9iA4+f3nMzz85szmvKmQ==}
-credentials=test@gmail.com/${password}
+password={crypt:wyaLuNGpJ8t1KxbRXZOQoA==}
+credentials=val@val.com
+
