Bugs, changes and joy.

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -13,6 +13,8 @@ extra_capabilities=NULL
 app_version=
 #=====================================================#
 
+capabilities.unexpectedAlertBehaviour=ignore
+
 #=============== Environment configuration ===========#
 env=STAG
 STAG.url=http://automationpractice.com/index.php#stag
