Surefire plugin added. TestNG suite for regression added. Priorities deleted

--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>com.solvd</groupId>
     <artifactId>selenium-web-testing</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -15,7 +15,7 @@
         <carina-core_version>6.5.46</carina-core_version>
         <carina-cucumber_version>1.0.3</carina-cucumber_version>
         <java.version>1.8</java.version>
-        <suite>helloWorld</suite>
+        <suite></suite>
     </properties>
 
     <dependencies>
@@ -44,6 +44,17 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M4</version>
+                <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
         </plugins>
