Credentials removed from _config.properties file

--- a/src/main/resources/_config.properties
+++ b/src/main/resources/_config.properties
@@ -7,7 +7,7 @@ url=
 platform=*
 browser=chrome
 browser_version=latest
-selenium_host=http://localhost:4444/wd/hub
+selenium_host=http://fvazquez:Txui87s@localhost:4444/wd/hub
 custom_capabilities=NULL
 extra_capabilities=NULL
 app_version=
@@ -59,6 +59,5 @@ crypto_key_type=AES
 crypto_key_size=128
 crypto_key_path=./src/main/resources/crypto.key
 #=====================================================#
-password={crypt:wyaLuNGpJ8t1KxbRXZOQoA==}
-credentials=val@val.com
+
 
